--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header>
 
-    <img src="img/dv-logo.svg" alt="" class="dv-logo">
+    <img src="img/dv-logo.png" alt="" class="dv-logo">
     
     <div class="nav">
         <a class="main_nav" href="index.html">Головна</a>
